Fixed conclusion text.

--- a/Decision_trees_on_Amazon_Reviews.ipynb
+++ b/Decision_trees_on_Amazon_Reviews.ipynb
@@ -339,10 +339,10 @@
     },
     {
       "metadata": {
-        "id": "PPeInnUAyjXb",
+        "id": "AyeDgIMG0239",
         "colab_type": "code",
         "colab": {},
-        "outputId": "8ea40e21-27c3-45e1-fb60-60dd5b63b637"
+        "outputId": "3f068ba3-3c17-4c1e-d2f1-0b0e4ab3b027"
       },
       "cell_type": "code",
       "source": [
@@ -397,7 +397,7 @@
     },
     {
       "metadata": {
-        "id": "R49fBkIByjXh",
+        "id": "7mywNWxe024L",
         "colab_type": "code",
         "colab": {}
       },
@@ -828,7 +828,7 @@
     },
     {
       "metadata": {
-        "id": "OigdDb_lyjYT",
+        "id": "w_axSyU6025J",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -1114,7 +1114,7 @@
         "colab_type": "code",
         "id": "BQ3A1d68eULw",
         "scrolled": false,
-        "outputId": "becfc667-7afd-4251-e7e8-e92dfa286c63"
+        "outputId": "a5fd221e-d810-4000-8d83-8aa6c4a4d9fe"
       },
       "cell_type": "code",
       "source": [
@@ -1239,7 +1239,7 @@
     },
     {
       "metadata": {
-        "id": "PQY4wK_ByjY-",
+        "id": "g4BBH-SE026E",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -1449,7 +1449,7 @@
         "colab_type": "code",
         "id": "oepudlcUeUM2",
         "scrolled": true,
-        "outputId": "9e51d3f3-ed86-40e3-9e47-2e541cbb3865"
+        "outputId": "86dea95e-9045-42e0-cf1c-dba5a0e11505"
       },
       "cell_type": "code",
       "source": [
@@ -1574,7 +1574,7 @@
     },
     {
       "metadata": {
-        "id": "872AzOeoyjZg",
+        "id": "hj_U99X_026k",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -1611,7 +1611,7 @@
     },
     {
       "metadata": {
-        "id": "d7PcIQozyjZl",
+        "id": "19qfafXe026n",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -1654,7 +1654,7 @@
     },
     {
       "metadata": {
-        "id": "FT-JaIj3yjZr",
+        "id": "58zvwfrd026p",
         "colab_type": "text"
       },
       "cell_type": "markdown",
@@ -1698,9 +1698,9 @@
       "source": [
         "### Conclusion:\n",
         "\n",
-        "* We applied LR with regularization on amazon food reviews for various vector representations.\n",
+        "* We applied Decision Tree classifier on amazon food reviews for various vector representations.\n",
         "\n",
-        "* The consolidated summary of various ratios can be found in the table above.\n"
+        "* The choice of parameter 'max_depth' is crucial to the performance of the model. When depth is too low, the model underfits. When it's too much, it overfits.\n"
       ]
     }
   ]
